--- a/.gitignore
+++ b/.gitignore
@@ -520,3 +520,5 @@ Mkfile.old
 dkms.conf
 C#101/.vscode/launch.json
 C#101/.vscode/tasks.json
+C#101/Ders Notları/Degiskenler/.vscode/launch.json
+C#101/Ders Notları/Degiskenler/.vscode/tasks.json
