--- a/.gitignore
+++ b/.gitignore
@@ -522,3 +522,5 @@ C#101/.vscode/launch.json
 C#101/.vscode/tasks.json
 C#101/Ders Notları/Degiskenler/.vscode/launch.json
 C#101/Ders Notları/Degiskenler/.vscode/tasks.json
+C#101/Ders Notları/Operatorler/.vscode/launch.json
+C#101/Ders Notları/Operatorler/.vscode/tasks.json
