--- a/.gitignore
+++ b/.gitignore
@@ -524,3 +524,5 @@ C#101/Ders Notları/Degiskenler/.vscode/launch.json
 C#101/Ders Notları/Degiskenler/.vscode/tasks.json
 C#101/Ders Notları/Operatorler/.vscode/launch.json
 C#101/Ders Notları/Operatorler/.vscode/tasks.json
+C#101/Ders Notları/Tip Donusumleri/.vscode/launch.json
+C#101/Ders Notları/Tip Donusumleri/.vscode/tasks.json
