--- a/.gitignore
+++ b/.gitignore
@@ -526,3 +526,5 @@ C#101/Ders Notları/Operatorler/.vscode/launch.json
 C#101/Ders Notları/Operatorler/.vscode/tasks.json
 C#101/Ders Notları/Tip Donusumleri/.vscode/launch.json
 C#101/Ders Notları/Tip Donusumleri/.vscode/tasks.json
+C#101/Ders Notları/Hata Yonetimi/.vscode/tasks.json
+C#101/Ders Notları/Hata Yonetimi/.vscode/launch.json
