--- a/.gitignore
+++ b/.gitignore
@@ -528,3 +528,5 @@ C#101/Ders Notları/Tip Donusumleri/.vscode/launch.json
 C#101/Ders Notları/Tip Donusumleri/.vscode/tasks.json
 C#101/Ders Notları/Hata Yonetimi/.vscode/tasks.json
 C#101/Ders Notları/Hata Yonetimi/.vscode/launch.json
+C#101/Ders Notları/if-else-if/.vscode/launch.json
+C#101/Ders Notları/if-else-if/.vscode/tasks.json
