--- a/.gitignore
+++ b/.gitignore
@@ -530,3 +530,5 @@ C#101/Ders Notları/Hata Yonetimi/.vscode/tasks.json
 C#101/Ders Notları/Hata Yonetimi/.vscode/launch.json
 C#101/Ders Notları/if-else-if/.vscode/launch.json
 C#101/Ders Notları/if-else-if/.vscode/tasks.json
+C#101/Ders Notları/switch-case/.vscode/tasks.json
+C#101/Ders Notları/switch-case/.vscode/launch.json
