--- a/.gitignore
+++ b/.gitignore
@@ -532,3 +532,5 @@ C#101/Ders Notları/if-else-if/.vscode/launch.json
 C#101/Ders Notları/if-else-if/.vscode/tasks.json
 C#101/Ders Notları/switch-case/.vscode/tasks.json
 C#101/Ders Notları/switch-case/.vscode/launch.json
+C#101/Ders Notları/Donguler-For-Loop/.vscode/launch.json
+C#101/Ders Notları/Donguler-For-Loop/.vscode/tasks.json
