--- a/.gitignore
+++ b/.gitignore
@@ -534,3 +534,5 @@ C#101/Ders Notları/switch-case/.vscode/tasks.json
 C#101/Ders Notları/switch-case/.vscode/launch.json
 C#101/Ders Notları/Donguler-For-Loop/.vscode/launch.json
 C#101/Ders Notları/Donguler-For-Loop/.vscode/tasks.json
+C#101/Ders Notları/Donguler-While-ForEach/.vscode/launch.json
+C#101/Ders Notları/Donguler-While-ForEach/.vscode/tasks.json
