--- a/.gitignore
+++ b/.gitignore
@@ -536,3 +536,5 @@ C#101/Ders Notları/Donguler-For-Loop/.vscode/launch.json
 C#101/Ders Notları/Donguler-For-Loop/.vscode/tasks.json
 C#101/Ders Notları/Donguler-While-ForEach/.vscode/launch.json
 C#101/Ders Notları/Donguler-While-ForEach/.vscode/tasks.json
+C#101/Ders Notları/Diziler/.vscode/launch.json
+C#101/Ders Notları/Diziler/.vscode/tasks.json
