--- a/.gitignore
+++ b/.gitignore
@@ -538,3 +538,5 @@ C#101/Ders Notları/Donguler-While-ForEach/.vscode/launch.json
 C#101/Ders Notları/Donguler-While-ForEach/.vscode/tasks.json
 C#101/Ders Notları/Diziler/.vscode/launch.json
 C#101/Ders Notları/Diziler/.vscode/tasks.json
+C#101/Ders Notları/Diziler/Array_Sınıfı_metotları/.vscode/launch.json
+C#101/Ders Notları/Diziler/Array_Sınıfı_metotları/.vscode/tasks.json
